fix heatmap not showing up

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
 }
 
 .tag {
+  margin-bottom: 5px;
   margin-left: 10px;
 }
 
